--- a/app/src/main/res/layout/activity_genarate_qr.xml
+++ b/app/src/main/res/layout/activity_genarate_qr.xml
@@ -44,7 +44,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/fixed_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="150dp"
+                        android:layout_height="wrap_content"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -68,11 +68,11 @@
                             android:id="@+id/arrow_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_56sdp"
+                            android:layout_marginBottom="@dimen/_70sdp"
                             android:background="@color/hidden_view_color"
                             android:foregroundGravity="center_horizontal"
                             android:padding="@dimen/_4sdp"
-                            android:src="@drawable/ic_cross"
+                            android:src="@drawable/menu_bar_ic"
                             app:layout_constraintBottom_toBottomOf="@+id/fixed_layout"
                             app:layout_constraintEnd_toEndOf="@+id/fixed_layout"
                             app:layout_constraintHorizontal_bias="0.062"
@@ -83,8 +83,6 @@
                             android:layout_width="@dimen/_42sdp"
                             android:layout_height="@dimen/_42sdp"
                             android:layout_alignParentRight="true"
-                            android:layout_marginTop="@dimen/_10sdp"
-                            android:layout_marginBottom="@dimen/_10sdp"
                             android:background="@drawable/corecircle"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -140,7 +138,6 @@
                             android:id="@+id/dbaNameTV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_10sdp"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="center"
                             android:text="[Insert DBA Name]"
@@ -151,7 +148,7 @@
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.797" />
+                            app:layout_constraintVertical_bias="0.747" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -187,7 +184,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="@dimen/_1sdp"
                                         android:layout_marginTop="@dimen/_11sdp"
-                                        android:layout_marginBottom="@dimen/_15sdp"
+                                        android:layout_marginBottom="@dimen/_16sdp"
                                         android:background="@color/primary_green" />
 
                                     <TextView
@@ -204,6 +201,7 @@
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_semibold"
                                         android:gravity="center"
+                                        android:layout_marginTop="@dimen/_3sdp"
                                         android:text="TID-13243435"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/_16ssp" />
@@ -211,8 +209,8 @@
                                     <View
                                         android:layout_width="match_parent"
                                         android:layout_height="@dimen/_1sdp"
-                                        android:layout_marginTop="@dimen/_15sdp"
-                                        android:layout_marginBottom="@dimen/_15sdp"
+                                        android:layout_marginTop="@dimen/_16sdp"
+                                        android:layout_marginBottom="@dimen/_16sdp"
                                         android:background="@color/primary_green" />
 
                                     <TextView
@@ -230,6 +228,7 @@
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_semibold"
                                         android:gravity="center"
+                                        android:layout_marginTop="@dimen/_3sdp"
                                         android:text="Front Counter 1"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/_16ssp" />
@@ -237,7 +236,7 @@
                                     <View
                                         android:layout_width="match_parent"
                                         android:layout_height="@dimen/_1sdp"
-                                        android:layout_marginTop="@dimen/_15sdp"
+                                        android:layout_marginTop="@dimen/_16sdp"
                                         android:background="@color/primary_green" />
 
                                 </LinearLayout>
@@ -246,7 +245,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_below="@+id/detailsLL"
-                                    android:layout_marginHorizontal="@dimen/_11sdp"
+                                    android:layout_marginHorizontal="@dimen/_21sdp"
                                     android:layout_marginTop="@dimen/_32sdp"
                                     android:orientation="vertical">
 
