--- a/app/src/main/res/layout/fragment_genarate_qr.xml
+++ b/app/src/main/res/layout/fragment_genarate_qr.xml
@@ -31,64 +31,19 @@
                 android:inputType="numberDecimal"
                 android:maxLength="@string/maxlength"
                 android:textColor="@color/white"
+                android:cursorVisible="true"
                 android:textColorHint="@color/white"
                 android:textCursorDrawable="@drawable/cursor_color_white"
                 android:textSize="@dimen/_53ssp" />
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/closeLL"
-                android:layout_width="@dimen/_32sdp"
-                android:layout_height="@dimen/_32sdp"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="@dimen/_21sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+
+            <ImageView
+                android:id="@+id/closeIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_27sdp"
+                android:layout_marginStart="@dimen/_3sdp"
                 android:visibility="gone"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/userProfileCV"
-                    android:layout_width="@dimen/_11sdp"
-                    android:layout_height="@dimen/_11sdp"
-                    android:layout_alignParentRight="true"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="@dimen/_14sdp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <ImageView
-                        android:id="@+id/imgProfileSmall"
-                        android:layout_width="@dimen/_6sdp"
-                        android:layout_height="@dimen/_6sdp"
-                        android:scaleType="fitXY"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_white_close"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/tvUserInfoSmall"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/primary_green"
-                        android:fontFamily="@font/opensans_bold"
-                        android:gravity="center"
-                        android:text="TT"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_14sdp"
-                        android:visibility="gone" />
-
-                    <!--                    <ImageView-->
-                    <!--                        android:layout_width="wrap_content"-->
-                    <!--                        android:layout_height="wrap_content"-->
-                    <!--                        android:layout_weight="1"-->
-                    <!--                        android:scaleType="fitXY"-->
-                    <!--                        android:src="@drawable/mask_group_16" />-->
-                </androidx.cardview.widget.CardView>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:src="@drawable/clear_icon_ic"/>
 
         </LinearLayout>
     </LinearLayout>
