--- a/app/src/main/res/drawable/corecircle.xml
+++ b/app/src/main/res/drawable/corecircle.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/_24sdp" />
-            <stroke android:width="@dimen/_3sdp" android:color="#00A1A1" />
+            <stroke android:width="@dimen/_1sdp" android:color="@color/white" />
         </shape>
     </item>
 </selector>
