--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -80,14 +80,14 @@
                             android:layout_marginLeft="@dimen/_10sdp"
                             android:layout_marginTop="@dimen/_53sdp"
                             android:layout_marginRight="@dimen/_10sdp"
-                            android:layout_marginBottom="@dimen/_1sdp"
                             android:background="@color/white"
+                            android:layout_marginBottom="@dimen/_1sdp"
                             app:cardCornerRadius="@dimen/_10sdp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:background="@color/white"
+                                android:background="@drawable/round_corner"
                                 android:orientation="vertical">
 
                                 <LinearLayout
@@ -184,9 +184,9 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_bold"
+                                        android:fontFamily="@font/opensans_regular"
                                         android:text=" CYN"
-                                        android:textColor="@color/primary_black"
+                                        android:textColor="@color/balance_text_color"
                                         android:textSize="@dimen/_11ssp"
                                         android:visibility="visible" />
 
@@ -253,11 +253,11 @@
                                     <TextView
                                         android:id="@+id/eTremarks"
                                         android:layout_width="match_parent"
-                                        android:layout_height="@dimen/_120sdp"
+                                        android:layout_height="@dimen/_81sdp"
                                         android:layout_marginLeft="@dimen/_15sdp"
                                         android:layout_marginRight="@dimen/_15sdp"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:hint="Request by customer"
+                                        android:hint="Refund Note (Optional)"
                                         android:padding="@dimen/_6sdp"
                                         android:textColor="@color/primary_black"
                                         android:textColorHint="@color/light_gray"
