generate qr api integration

--- a/app/src/main/res/layout/activity_genarate_qr.xml
+++ b/app/src/main/res/layout/activity_genarate_qr.xml
@@ -197,6 +197,7 @@
                                         android:textSize="@dimen/_11ssp" />
 
                                     <TextView
+                                        android:id="@+id/currentEmployeeTV"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_semibold"
@@ -223,7 +224,7 @@
                                         android:textSize="@dimen/_11ssp" />
 
                                     <TextView
-                                        android:id="@+id/terminalIDTV"
+                                        android:id="@+id/terminalNameTV"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_semibold"
