--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -87,7 +87,7 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/round_corner"
+                                android:background="@drawable/rounded_corners"
                                 android:orientation="vertical">
 
                                 <LinearLayout
