--- a/app/src/main/res/layout/recent_txns_list.xml
+++ b/app/src/main/res/layout/recent_txns_list.xml
@@ -20,6 +20,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/descriptionTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
@@ -28,6 +29,7 @@
                 android:textSize="@dimen/_11ssp" />
 
             <TextView
+                android:id="@+id/dateTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_1sdp"
@@ -39,6 +41,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/amountTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
