--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -175,7 +175,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:text="10,000,999.00"
+                                    android:text=""
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_24ssp" />
 
