--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,5 +33,21 @@
     <color name="background_lt_blue">#40d8e2f0</color>
     <color name="primary_dark_green">#008682</color>
     <color name="stepper_divider">#1fc38a</color>
+    <!--Background color-->
+    <color name="calendar_picker_bg">#00FFFFFF</color>
+
+    <color name="calendar_day_unselected_bg">#00000000</color>
+    <color name="calendar_day_selected_bg">#00A6A2</color>
+    <color name="calendar_day_range_selected_bg">#22018786</color>
+
+    <!--Font color-->
+    <color name="calendar_day_disabled_font">#22018786</color>
+    <color name="calendar_day_weekend_font">#FF018786</color>
+    <color name="calendar_day_selected_font">#FFFFFF</color>
+    <color name="calendar_day_normal_font">#333333</color>
+
+    <color name="calendar_month_font">#000000</color>
+    <color name="calendar_week_font">#333333</color>
+
 
 </resources>
