--- a/app/src/main/res/layout/activity_genarate_qr.xml
+++ b/app/src/main/res/layout/activity_genarate_qr.xml
@@ -44,7 +44,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/fixed_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="170dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +68,7 @@
                             android:id="@+id/arrow_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_70sdp"
+                            android:layout_marginBottom="@dimen/_60sdp"
                             android:background="@color/hidden_view_color"
                             android:foregroundGravity="center_horizontal"
                             android:padding="@dimen/_4sdp"
