--- a/app/src/main/res/layout/merchant_qr.xml
+++ b/app/src/main/res/layout/merchant_qr.xml
@@ -101,7 +101,7 @@
                         android:layout_marginStart="@dimen/_30sdp"
                         app:lottie_autoPlay="true"
                         app:lottie_loop="true"
-                        app:lottie_rawRes="@raw/stepper_loader" />
+                        app:lottie_rawRes="@raw/green_loading" />
 
                     <TextView
                         android:id="@+id/waitingText"
