--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -54,4 +54,54 @@
         <item name="android:theme">@style/cursorColor</item>
     </style>
 
+    <style name="CalendarDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/primary_green</item>
+    </style>
+
+    <style name="Calender" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorAccent">@color/teal_200</item>
+    </style>
+
+    <style name="Theme.Calender" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/primary_green</item>
+        <item name="colorPrimaryDark">@color/primary_green</item>
+        <item name="colorAccent">@color/white</item>
+
+    </style>
+
+    <style name="CalendarPickerCell">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">center</item>
+    </style>
+
+    <style name="CalendarPickerCell.Month">
+        <item name="android:textSize">@dimen/calendar_month_textsize</item>
+        <item name="android:padding">@dimen/calendar_month_padding</item>
+        <item name="android:textColor">@color/calendar_month_font</item>
+    </style>
+
+    <style name="CalendarPickerCell.Week" parent="CalendarPickerCell">
+        <item name="android:textSize">@dimen/calendar_week_textsize</item>
+        <item name="android:textColor">@color/calendar_week_font</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="CalendarPickerCell.Day">
+        <item name="android:layout_width">@dimen/calendar_day_height</item>
+        <item name="android:layout_height">@dimen/calendar_day_height</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/calendar_day_textsize</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/calendar_day_normal_font</item>
+    </style>
+
+
 </resources>
