--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -58,6 +58,7 @@
                 android:paddingBottom="@dimen/_7sdp">
 
                 <TextView
+                    android:id="@+id/typeNsubtype"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
@@ -74,6 +75,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_bold"
@@ -111,30 +113,30 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:paddingTop="@dimen/_7sdp"
                     android:paddingBottom="@dimen/_10sdp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_8sdp"
+                        android:layout_weight="1"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="@string/status"
+                        android:text="Status"
                         android:textColor="@color/dark_gray"
                         android:textSize="@dimen/_11ssp" />
 
                     <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:text="@string/copy"
-                        android:textAlignment="textEnd"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_11ssp" />
-
+                        android:id="@+id/statusTV"
+                        android:layout_width="@dimen/_68sdp"
+                        android:layout_height="@dimen/_14sdp"
+                        android:layout_marginTop="@dimen/_6sdp"
+                        android:background="@drawable/txn_completed_bg"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:textColor="@color/true_green"
+                        android:textSize="@dimen/_7sdp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -302,6 +304,7 @@
                     android:textSize="@dimen/_11ssp" />
 
                 <TextView
+                    android:id="@+id/refID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
@@ -345,6 +348,7 @@
                     android:paddingBottom="@dimen/_10sdp">
 
                     <TextView
+                        android:id="@+id/nameTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
@@ -353,6 +357,7 @@
                         android:textSize="@dimen/_11ssp" />
 
                     <TextView
+                        android:id="@+id/custName"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -372,6 +377,7 @@
                     android:paddingBottom="@dimen/_10sdp">
 
                     <TextView
+                        android:id="@+id/emailTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
@@ -458,6 +464,7 @@
                         android:textSize="@dimen/_11ssp" />
 
                     <TextView
+                        android:id="@+id/terminalID"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -595,6 +602,7 @@
                             android:textSize="@dimen/_11ssp" />
 
                         <TextView
+                            android:id="@+id/orgRefId"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
