--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,5 +49,16 @@
     <color name="calendar_month_font">#000000</color>
     <color name="calendar_week_font">#333333</color>
 
+    <color name="txn_completed_trans">#E5F3E5</color>
+    <color name="txn_inprogress_trans">#E8F3F9</color>
+    <color name="inprogress_status">#1d86be</color>
 
+    <color name="txn_pending_trans">#fff6e5</color>
+    <color name="pending_status">#FFA70F</color>
+
+    <color name="txn_active_status">#E5F3E5</color>
+    <color name="txn_resend_invitation_status">#FAD0D0</color>
+
+    <color name="failed_status">#FFDD2C00</color>
+    <color name="txn_failed_trans">#22DD2C00</color>
 </resources>
