--- a/app/src/main/res/layout/refund_preview.xml
+++ b/app/src/main/res/layout/refund_preview.xml
@@ -91,6 +91,7 @@
             android:textSize="@dimen/_11ssp" />
 
         <TextView
+            android:id="@+id/customerNameTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
