--- a/app/src/main/res/layout/transaction_success.xml
+++ b/app/src/main/res/layout/transaction_success.xml
@@ -80,6 +80,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/refundedAMountTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_bold"
