--- a/app/src/main/res/layout/transaction_success.xml
+++ b/app/src/main/res/layout/transaction_success.xml
@@ -111,7 +111,7 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/validateCV"
+                android:id="@+id/doneCV"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_42sdp"
                 android:layout_marginHorizontal="@dimen/_21sdp"
@@ -130,6 +130,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/view_txn_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
