--- a/app/src/main/res/layout/fragment_genarate_qr.xml
+++ b/app/src/main/res/layout/fragment_genarate_qr.xml
@@ -30,6 +30,10 @@
                 android:hint="0.00"
                 android:inputType="numberDecimal"
                 android:maxLength="@string/maxlength"
+                android:textIsSelectable="false"
+                android:clickable="false"
+                android:longClickable="false"
+                android:autofillHints="creditCardSecurityCode"
                 android:textColor="@color/white"
                 android:cursorVisible="true"
                 android:textColorHint="@color/white"
